Removed horizontal scroll bar and fixed general things

--- a/stylus/base.styl
+++ b/stylus/base.styl
@@ -23,6 +23,8 @@ scrollbar-back =		#FFFFFF
 ::-webkit-scrollbar-track-piece
 	background-color scrollbar-back
 	-webkit-border-radius 0
+::-webkit-scrollbar:horizontal
+	display none
 
 contentheading()
 	font-size 30px
